@@ -6,7 +6,7 @@
 # Provided by the Cygwin Ports project <http://cygwinports.dotsrc.org/>
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: cygport.in,v 1.40 2006-12-18 09:23:58 yselkowitz Exp $
+# $Id: cygport.in,v 1.41 2006-12-19 06:49:22 yselkowitz Exp $
 #
 ################################################################################
 
@@ -392,7 +392,7 @@ src_fetch() {
 	then
 		git_fetch;
 	else
-		for uri in ${SRC_URI}
+		for uri in ${SRC_URI} ${PATCH_URI}
 		do
 			case ${uri%%://*} in
 				mirror)			mirror_fetch ${uri} ;;
@@ -507,7 +507,7 @@ __mkdirs() {
 
 apply_patch() {
 	local patchfile;
-	local -i patchlevel;
+	local -i patchlevel=0;
 
 	for patchfile in ${@}
 	do
@@ -517,22 +517,22 @@ apply_patch() {
 			continue;
 		fi
 
-		if [ "${S}" = "${srcdir}" ]
-		then
-			patchlevel=0
-		else
-			patchlevel=1
-		fi
-
 		case ${patchfile} in
-			*.cygwin.patch) patchlevel+=1 ;;
+			${PF}.cygwin.patch)
+				if [ "${S}" = "${srcdir}" ]
+				then
+					patchlevel=1
+				else
+					patchlevel=2
+				fi
 		esac
 
 		while (( patchlevel <= 3 ))
 		do
-			if patch -f -s --dry-run -p${patchlevel} < ${patchfile} &> /dev/null
+			if patch -N -s --dry-run -p${patchlevel} -i ${patchfile} &> /dev/null
 			then
-				patch -f -p${patchlevel} < ${patchfile} || error "patch ${patchfile##*/} failed"
+				inform "applying patch ${patchfile##*/}:";
+				patch -N -p${patchlevel} -i ${patchfile} || error "patch ${patchfile##*/} failed"
 				break;
 			else
 				if (( patchlevel == 3 ))
@@ -565,6 +565,7 @@ __oldpatch() {
 
 src_prep() {
 	local sigext;
+	local src_patch;
 	local src_pkg;
 	local n=1;
 
@@ -606,6 +607,13 @@ src_prep() {
 	for src_pkg in ${_src_orig_pkgs}
 	do
 		unpack ${top}/${src_pkg};
+	done
+
+	cd ${origsrcdir}/${SRC_DIR};
+	
+	for src_patch in ${_src_orig_patches}
+	do
+		apply_patch ${top}/${src_patch};
 	done
 
 	if [ ! -d ${origsrcdir}/${SRC_DIR} ]
@@ -737,6 +745,7 @@ cygautoreconf() {
 			config_h="$(grep 'A[CM]_CONFIG_HEADERS*' ${d}/${configure_ac} | sed -e 's!A[CM]_CONFIG_HEADERS*(\[*\(.*\))!\1!g' -e 's!\]*!!g')";
 
 			case "${config_h}" in
+				'') config_h_in= ;;
 				*:*) config_h_in="$(echo "${config_h//:/ }" | cut -d ' ' -f 2-)" ;;
 				*) config_h_in="${config_h}.in" ;;
 			esac
@@ -1375,6 +1384,8 @@ gpg_sign() {
 }
 
 pkg_srcpkg() {
+	local src;
+
 	rm -fr ${spkgdir}/*;
 
 	echo;
@@ -1393,9 +1404,9 @@ pkg_srcpkg() {
 
 	cp ${top}/${PF}.cygport ${spkgdir};
 
-	for src_pkg in ${_src_orig_pkgs}
+	for src in ${_src_orig_pkgs} ${_src_orig_patches}
 	do
-		cp ${top}/${src_pkg} ${spkgdir};
+		cp ${top}/${src} ${spkgdir};
 	done
 
 	cd ${spkgdir};
@@ -1601,6 +1612,13 @@ do
 done
 readonly _src_orig_pkgs;
 unset _src_uri;
+
+for _patch_uri in ${PATCH_URI}
+do
+	_src_orig_patches="${_src_orig_patches} ${_patch_uri##*/}";
+done
+readonly _src_orig_patches;
+unset _patch_uri;
 
 declare -r cygwin_patchfile=${PF}.cygwin.patch;
 declare -r src_patchfile=${PF}.src.patch;
