@@ -1,4 +1,9 @@
 
+	* TODO
+	* bin/cygport.in (src_fetch, src_prep, apply_patch, pkg_srcpkg):
+	Implement PATCH_URI for upstream or third-party patches.
+	(cygautoreconf): Fix where not using AC_CONFIG_HEADERS.
+
 	* data/mirrors (mirror_portage): New mirror for gentoo-x86 CVS repo.
 	(mirror_sourceforge): Prepend downloads.sourceforge.net.
 	(mirror_vim): Added.
